Make messageHandlerInMainThread support main-thread worklets.

This allows messageHandlerInMainThread to work with both a
window/document and worklet execution contexts.

This is needed for properly handling JS Errors in worklets.

BUG=602445

Review URL: https://codereview.chromium.org/1885833002

Cr-Commit-Position: refs/heads/master@{#387384}

Former-commit-id: 8e9a7753c76d9878338c6b916bdba9fa80796574